--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,6 +25,12 @@
   clip: rect(0 0 0 0);
 }
 
+img {
+  max-width: 100%;
+  height: auto;
+  object-fit: contain;
+}
+
 .button {
   font-weight: 700;
   font-size: 20px;
@@ -34,8 +40,13 @@
   text-align: center;
   border: none;
   border-radius: 4px;
+  padding: 8px 24px;
   text-decoration: none;
+  -webkit-appearance: none;
+  -moz-appearance:    none;
+  appearance:         none;
 }
+
 
 .button-primary{
   background-color: #756157;
@@ -266,6 +277,7 @@ body {
   text-transform: uppercase;
   text-align: center;
 }
+
 .search p {
   font-size: 22px;
   line-height: 118%;
@@ -286,7 +298,7 @@ body {
 .subscription {
   width: 100%;
   height: 414px;
-  background-image: url("../images/Subscribe-background.jpg");
+  background-image: url("../images/subscribe-background.jpg");
   background-color: #82b3d3;
   background-position: left top;
   background-repeat: no-repeat;
@@ -311,6 +323,15 @@ body {
 
 .newsletter-form {
   text-align: center;
+}
+
+.field::placeholder {
+  font-family: "PT Sans", sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 24px;
+  color: #000000;
+  opacity: 0.6;
 }
 
 .social-list {
@@ -416,7 +437,7 @@ input[type= "radio"] {
 }
 
 input[type= "radio"]:checked {
-  background-image: url("../images/svg/checkbox-radio.svg");
+  background-image: url("../images/svg/radio.svg");
   background-repeat: no-repeat;
   background-position: center;
 }
