--- a/styles/styles.css
+++ b/styles/styles.css
@@ -42,6 +42,9 @@ img {
   border-radius: 4px;
   border: none;
   padding: 8px 26px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
 
 .button-primary{
