--- a/styles/styles.css
+++ b/styles/styles.css
@@ -940,17 +940,17 @@ input[type='number'] {
 
 .modal-container{
   position: fixed;
-  top: 0;
-  left: 0;
+  display: flex;
   width: 100%;
   height: 100%;
-  display: flex;
+  top: 0;
+  left: 0;
   background-color: rgba(242, 242, 242, 0.8);
 }
 
-/* закрыть окно */
-.modal-container-close {
-  display: none;
+/* открыть окно */
+.modal-container-opened {
+  display: flex;
 }
 
 .modal{
@@ -965,10 +965,11 @@ input[type='number'] {
   border-radius: 30px;
 }
 
+.title-wrapper {
+  display: flex;
+}
+
 .modal-close-button {
-  position: absolute;
-  top: 64px;
-  right: 52px;
   padding: 0;
   width: 52px;
   height: 52px;
@@ -979,6 +980,9 @@ input[type='number'] {
   background-repeat: no-repeat;
   background-position: center;
   cursor: pointer;
+  flex-shrink: 0;
+  position: relative;
+  left: 15px;
 }
 
 .modal-title {
@@ -990,9 +994,14 @@ input[type='number'] {
   margin: 0;
   margin-bottom: 64px;
   text-transform: uppercase;
+  margin-right: auto;
 }
 
-.input-lable {
+.field-date {
+  margin-bottom: 23px;
+}
+
+.input-label {
   font-family: "PT Sans", sans-serif;
   font-weight: 700;
   font-size: 20px;
@@ -1000,13 +1009,12 @@ input[type='number'] {
   text-transform: capitalize;
   color: #000000;
   flex-shrink: 0;
+  margin-right: 18px;
+  min-width: 137px;
 }
 
-.input-lable-adults {
-  margin-right: 46px;
-}
-
-.input-lable-children {
+.input-label-children {
+  min-width: 50px;
   margin-right: 10px;
 }
 
@@ -1018,7 +1026,6 @@ input[type='number'] {
   font-family: "PT Sans", sans-serif;
   font-weight: 700;
   color: #000000;
-  width: 440px;
   padding: 12px 40px 12px 20px;
   font-size: 18px;
   line-height: 24px;
@@ -1028,6 +1035,7 @@ input[type='number'] {
   outline: none;
   margin: 0;
   box-sizing: border-box;
+  flex-grow: 1;
   flex-shrink: 0;
 }
 
@@ -1048,7 +1056,6 @@ input[type='number'] {
   padding-right: 20px;
   margin-left: 137px;
   margin-top: 4px;
-  margin-bottom: 23px;
 }
 
 .warning-message {
@@ -1062,7 +1069,7 @@ input[type='number'] {
   background-position: 95% 50%;
 }
 
-.age-wrapper {
+.field-age-wrapper {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -1073,7 +1080,6 @@ input[type='number'] {
 .children-wrapper {
   display: flex;
   align-items: center;
-  position: relative;
 }
 
 .button-wrapper {
@@ -1101,6 +1107,8 @@ input[type='number'] {
   box-sizing: border-box;
   border-radius: 4px 0 0 4px ;
   border: none;
+  background-color: #f2f2f2;
+  appearance: none;
   cursor: pointer;
 }
 
@@ -1123,7 +1131,8 @@ input[type='number'] {
 }
 
 .tooltip-toggle {
-  position: absolute;
+  position: relative;
+  top: 3px;
   background-image: url("../images/svg/tooltip.svg");
   background-repeat: no-repeat;
   background-position: center;
@@ -1133,22 +1142,25 @@ input[type='number'] {
   border-radius: 50%;
   border: none;
   cursor: pointer;
+  margin-right: 46px;
 }
 
 .tooltip-text {
   position: absolute;
-  top: 52px;
-  left: 80px;
+  top: 42px;
+  left: 50%;
   transform: translateX(-50%);
   width: 256px;
-  display: inline-block;
+  font-family: "PT Sans", sans-serif;
   font-size: 16px;
   line-height: 20px;
+  text-align: start;
   color: #ffffff;
   background-color: #333333;
   padding: 15px 18px 18px 22px;
   box-sizing: border-box;
   border-radius: 10px;
+  display: none;
 }
 
 .tooltip-text::after {
@@ -1157,11 +1169,11 @@ input[type='number'] {
   width: 19px;
   height: 19px;
   background-color: #333333;
-  top:-7px;
-  left: 43%;
-  transform: rotate(45deg);
+  top: 0;
+  left: 49%;
+  transform: rotate(45deg) translateX(-50%);
 }
 
-.tooltip-text-close {
-  display: none;
+.tooltip-text-opened {
+  display: block;
 }
